--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "devDependencies": {
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "standard": "^12.0.1"
   },
   "dependencies": {
     "just-unique": "^3.2.0"
+  },
+  "scripts": {
+    "lint": "standard --fix *.js src/*js"
   }
 }
