--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "osm-alpha-roads",
+  "version": "1.0.0",
+  "description": "Search the OpenStreetMap database for a route of roads, where the names of the roads start with consecutive letters.",
   "devDependencies": {
     "request": "^2.88.0",
     "standard": "^12.0.1"
@@ -8,5 +11,8 @@
   },
   "scripts": {
     "lint": "standard --fix *.js src/*js"
-  }
+  },
+  "repository": "https://github.com/plepe/osm-alpha-roads/",
+  "author": "Stephan Bösch-Plepelits <skunk@xover.mud.at>",
+  "license": "GPL-3.0"
 }
